--- a/css/productsStyle.css
+++ b/css/productsStyle.css
@@ -1,6 +1,7 @@
 :root{
     /*colors*/
     --color-logo: #e63946;
+    --color-logo-blue: #072271;
     --color-footer: #1d3557;
     --secondary-text: gray;
     --light-grey: #80808021;
@@ -20,10 +21,10 @@ main .main-products{
 
 main .products-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     padding: 20px;
     justify-content: center;
-    gap: 30px;
+    gap: 50px;
     max-width: 1200px;
     margin: 30px auto;
 }
@@ -33,20 +34,25 @@ main .products-list article{
     padding: 20px;
     width: 100%;
     height: fit-content;
+    border-radius: 10px;
+    box-shadow: var(--color-logo-blue) 8px 5px 10px;
 }
 
 main .products-list article h2{
-    font-size: var(--md);
+    font-size: var(--lg);
     margin-bottom: 15px;
     display: flex;
     justify-content: center;
+    font-weight: 700;
+    color: var(--color-logo-blue);
 }
 
 main .products-list article img{
     width: 100%;
-    height: 250px;
+    height: 280px;
     background-color: red;
     margin-bottom: 15px;
+    border-radius: 10px;
 }
 
 main .products-list article a{
