--- a/css/locationStyle.css
+++ b/css/locationStyle.css
@@ -10,26 +10,16 @@
     --lg: 1.8rem;
 }
 
-main .main_location--headerImg{
-    height: 200px;
-    background-color: rgb(49, 168, 69);
-    margin: 20px 10px;
-}
 
 main .main_location--information{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    margin: 20px 10px;
-    justify-items: center;
+    text-align: center;
 }
 
-main .location_information--map{
-    max-width: 1024px;
-}
-
-main .location_information--map iframe{
+.main_location--headerImg picture img, iframe{
     width: 100%;
 }
+
 
 main .location_information--directions{
     padding: 20px;
@@ -56,37 +46,37 @@ main .main_location--information p{
 
 
 
-@media(min-width:601px){
-    .main_location--information{
+@media(min-width:600px){
+    main .main_location--headerImg{
         display: grid;
-        grid-template-columns: 1fr !important;
-        grid-template-areas: 'information' 'map' !important;
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)) !important; 
+        gap: 30px;
+        margin: 20px
+    
+    }
+}
+
+@media(min-width:1024px){
+    main .main_location--headerImg{
+        align-items: center;
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)) !important; 
     }
 
-    .location_information--directions{
-        grid-area: information;
-        align-self: center;
-        text-align: center;
-    }
-
-    .location_information--map{
-        grid-area: map;
-        width: 90%;
+    img{
+        height: 50%;
     }
 
 }
 
-@media(min-width: 1024px){
-    .main_location--information{
-        display: grid !important;
-        grid-template-areas: 'information map' !important;
-        grid-template-columns: 400px 1fr !important;
-        max-width: 1400px;
-        margin: 0 auto;
+@media(max-width:432px){
+    main .main_location--headerImg{
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 30px;
+        margin: 20px
+    
     }
-
-    .location_information--directions{
-        grid-area: information;
-    }
-
 }
+
+
+
