--- a/css/asesoria.css
+++ b/css/asesoria.css
@@ -12,10 +12,14 @@
 }
 
 
-main .main_asesoria--headerImg{
-width: 100%;
-height: 150px;
-background-color: aqua;
+main .asesoria-img{
+    width: 100%;
+    height: 400px;
+    background-image: url(/img/asesoria/img-asesoria.jpg);
+    display: inline-block;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 main .main_asesoria--information{
@@ -102,6 +106,9 @@ main .main--socialMedia .socialMedia--instagram{
 main .main--socialMedia .socialMedia--whatsaap{
     background-image: url('../img/whatsapp.png');
 }
+
+
+
 
 .footer_information {
     justify-items: center;
